--- a/package.json
+++ b/package.json
@@ -4,8 +4,14 @@
   "description": "",
   "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --mode production"
   },
+
+  "publishConfig": {
+    "registry":"https://npm.pkg.github.com/"
+  },
+  
   "repository": {
     "type": "git",
     "url": "git+https://github.com/kostinvlad/ajs.git"
@@ -15,5 +21,13 @@
   "bugs": {
     "url": "https://github.com/kostinvlad/ajs/issues"
   },
-  "homepage": "https://github.com/kostinvlad/ajs#readme"
+  "homepage": "https://github.com/kostinvlad/ajs#readme",
+  "devDependencies": {
+    "@babel/cli": "^7.10.4",
+    "@babel/core": "^7.10.4",
+    "@babel/preset-env": "^7.10.4",
+    "babel-loader": "^8.1.0",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.12"
+  }
 }
